--- a/src/routes/item/index.html
+++ b/src/routes/item/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="." />
+    <base href="../" />
     <title>1DHN</title>
     <link rel="stylesheet" href="index.css" />
   </head>
