--- a/src/routes/item/index.html
+++ b/src/routes/item/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="appRoot"></div>
+    <footer>
+      UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
