--- a/src/routes/index/index.html
+++ b/src/routes/index/index.html
@@ -6,6 +6,7 @@
     <base href="." />
     <title>1DHN</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
   </head>
   <body>
     <div id="appRoot"></div>
